...
        android:paddingTop="20dp"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_nusp"
        android:hint="@string/nusp_hint"
        android:focusable="true"
        android:inputType="number"
        android:layout_marginTop = "46dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <EditText
        android:id="@+id/et_passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/passwd_hint"
        android:layout_marginLeft="10dp"
...
