<resources>
    <string name="app_name">CheckAttendance</string>
    <string name="register_login"><u><b><i>Register</i></b></u></string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="nusp_hint">NUSP</string>
    <string name="passwd_hint">Password</string>
    <string name="name_hint">Name</string>

    <string name="nusp_form">NUSP</string>
    <string name="name">Name</string>
    <string name="passwd">Password</string>
    <string name="update">Update</string>

    <string name="teacher">teacher</string>
    <string name="student">student</string>
    <string name="nusp">nusp</string>
    <string name="type">type</string>
    <string name="response">response</string>
    <string name="allStudents">allStudents</string>
    <string name="allSeminars">allSeminars</string>
    
    <string name="list_attendees_title">List Attendees</string>
    <string name="update_seminar_title">Update Seminar</string>
    <string name="register_seminar_title">Register Seminar</string>
    <string name="update_profile_title">Update Profile</string>
    <string name="register_profile">Register</string>
    <string name="bluetooth_title">Bluetooth Devices</string>

    <string name="profile_registered">You registered a new </string>
    <string name="profile_updated">Profile updated!</string>
    <string name="profile_not_updated">Your profile was not updated. Try again later</string>
    <string name="abscence_passwd">You must provide a password to update your profile</string>

    <string name="successfull_login">You are logged in as </string>
    <string name="login_error">Wrong credentials. Please, try agai</string>
    <string name="profile_name">name</string>

    <string name="seminar_registered_successfully">The seminar was registered successfully</string>
    <string name="seminar_updated">Seminar updated!</string>
    <string name="seminar_not_updated">Seminar was not updated. Try again later</string>

    <string name="abscense_seminar_name">You must provide the name of the seminar</string>

    <string name="seminar_id">id</string>
    <string name="seminar_name">name</string>
    <string name="seminar_id_received">Seminar ID received: </string>
    <string name="seminar_auth">Seminar authentication</string>
    <string name="seminar_id_readed_log">SEMINAR ID READED: </string>
    <string name="seminar_id_received_log">SEMINAR ID RECEIVED: </string>

    <string name="cannot_fetch_attended_seminar">Sorry, we cannot fetch your attended seminars</string>
    <string name="cannot_fetch_seminars">Sorry, we cannot fetch seminars data</string>
    <string name="cannot_fetch_students">Sorry, we cannot fetch students data</string>

    <string name="confirm_attendance">Your attendance for this seminar was confirmed</string>
    <string name="problem_attendance_confirmation">We had some problem during your attendance confirmation. Please, try again later</string>
    <string name="different_seminar">The scanned seminar isn\'t the same that you selected. Try again</string>

    <string name="network_issue">We had some network problem. Please, try again later</string>

    <string name="cannot_close_socket">Could not close the connect socket</string>
    <string name="cannot_write_buffer_socket">Could not send data via socket</string>
    <string name="cannot_read_buffer_socket">Could not read data from socket</string>
    <string name="cannot_get_outputstream_socket">Could not get OutputStream via socket</string>
    <string name="cannot_get_inputstream_socket">Could not get InputStream via socket</string>
    <string name="cannot_accept_socket_connection">Socket\'s accept() method failed</string>
    <string name="cannot_connect_socket">Socket\'s connect() method failed</string>
    <string name="cannot_get_socket">Socket\'s listen() method failed</string>
    <string name="writing">Writing: </string>
    <string name="reading">Reading: </string>

    <string name="bluetooth_teacher_accepting_connections">\n\nYou are accepting connections to send the seminar\'s token for students via bluetooth</string>
    <string name="bluetooth_teacher_text_to_present_device">Attendees should connect with: </string>
    <string name="bluetooth_not_supported">Device does not support Bluetooth</string>
    <string name="bluetooth_no_paired_devices">None paired devices</string>
    <string name="bluetooth_scanning">Scanning</string>
    <string name="bluetooth_select_device">Select a device</string>
    <string name="bluetooth_no_device">No devices found</string>

    <string name="bluetooth_paired_devices">Paired Bluetooth Devices</string>
    <string name="bluetooth_other_devices">Other Bluetooth Devices</string>
    <string name="bluetooth_scan">Scan</string>
    <string name="bluetooth_choose_device">Choose bluetooth device</string>

    <string name="qr_code_title">Scan QR code</string>
    <string name="qr_code_prompt_camera">Scan the seminar QR code</string>
    <string name="cancel_qr_code_scan">Cancelled QR code scan</string>
    <string name="qr_code_format">QR_CODE</string>
    <string name="qr_code_format_not_supported">Format not supported. Try again</string>

    <string name="qr_code">QR code</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="list_attendees">List attendees</string>
    <string name="edit">Edit</string>

    <string name="update_profile">Update Profile</string>
    <string name="logout">Logout</string>
    <string name="register_teacher">Register Teacher</string>
</resources>
