<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_qr_code_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_filter_center_focus_black_24dp"
        android:background="@color/colorAccent"
        android:textColor="#ffffff"
        android:layout_margin="10dp"
        android:text="@string/qr_code" />

    <Button
        android:id="@+id/btn_bluetooth_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_bluetooth_black_24dp"
        android:background="@color/colorAccent"
        android:textColor="#ffffff"
        android:layout_margin="10dp"
        android:text="@string/bluetooth" />

    <Button
        android:id="@+id/btn_list_attendees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_assignment_turned_in_black_24dp"
        android:background="@color/colorAccent"
        android:textColor="#ffffff"
        android:layout_margin="10dp"
        android:text="@string/list_attendees" />

    <Button
        android:id="@+id/btn_edit_seminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_mode_edit_black_24dp"
        android:background="@color/colorAccent"
        android:textColor="#ffffff"
        android:layout_margin="10dp"
        android:text="@string/edit" />

</LinearLayout>